--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       SPARK is a project that connects ambitious, STEM-curious teens in Africa with mentors in the Silicon Valley, who share their passions and goals. Through this mentorship, each student gets the support, guidance, and tools they need to build a tech project they care deeply about which will help them progress in their stem career.
     </p>
     <div class="d-flex justify-content-center mt-4">
-      <a href="register.php" class="btn btn-success me-3">Join Now</a>
+      <a href="register.php" class="btn btn-navy me-3">Join Now</a>
       <a href="learn.php" class="btn btn-outline-primary">Start Learning</a>
     </div>
   </div>
