--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>SPARK | Empowering African Girls in Tech</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="indexstyle.css">
+
   <style>
     body { font-family: 'Segoe UI', sans-serif; }
     .hero { background-color: #f9f9f9; padding: 60px 20px; text-align: center; }
@@ -43,7 +45,7 @@
         <li class="nav-item"><a class="nav-link" href="register.php">Register</a></li>
         <li class="nav-item"><a class="nav-link" href="login.php">Login</a></li>
         <li class="nav-item"><a class="nav-link" href="gallery.php">Gallery</a></li>
-        <li class="nav-item"><a class="nav-link" href="learn.php">Learn</a></li>
+        <!-- <li class="nav-item"><a class="nav-link" href="learn.php">Learn</a></li> -->
         <li class="nav-item"><a class="nav-link" href="stories.php">Stories</a></li>
       </ul>
     </div>
