Timeline Tab and Mentee Registration update

--- a/thanks.html
+++ b/thanks.html
@@ -63,7 +63,7 @@
 <div class="thankyou-container">
   <div class="thankyou-box">
     <h1 class="text-success mb-3">🎉 Thank You for Registering!</h1>
-    <p class="lead">We’ve received your submission. Our team will review and get back to you shortly.</p>
+    <p class="lead">We’ve received your submission. Here is a more in depth form for you to fill out by October 31st - https://forms.gle/rEPUZEzLk6HTaU229 .</p>
     <a href="index.html" class="btn btn-primary mt-4">Return to Home</a>
   </div>
 </div>
