--- a/thanks.html
+++ b/thanks.html
@@ -55,6 +55,7 @@
         <li class="nav-item"><a class="nav-link" href="gallery.php">Gallery</a></li>
         <li class="nav-item"><a class="nav-link" href="learn.php">Learn</a></li>
         <li class="nav-item"><a class="nav-link" href="stories.php">Stories</a></li>
+        <li class="nav-item"><a class="nav-link" href="timeline.php">Timeline</a></li>
       </ul>
     </div>
   </div>
